# gpa-tools

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh
assets/: AppIcon.icns  Info.plist
frontend/: app.js  index.html  style.css
src/: api.rs  credits.rs  db.rs  main.rs  oauth.rs  proxy.rs  quota.rs
