[package]
name = "gpa-tools"
version = "1.0.0"
edition = "2021"
description = "GPA Tools — Google Partner API 代理管理工具"
authors = ["daxia778"]

[[bin]]
name = "gpa-tools"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Static file embedding
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Native WebView window
tao = "0.33"
wry = "0.50"
